	Print AIM login / logout notifications
	The 'alist' command prints a list of aim buddies logged in
	The 'blist' command prints users from all protocols
	The 'l' key is now bound to 'blist' instead of 'zlist'
	Started work on 'addbuddy' and 'delbuddy' command but they DO NOT
	  WORK yet
	Removed a bit of faim code that allowed commands to be executed.
	
	
1.2.8
	Class pings are displayed differently now
	Updated owlconf.simple example to format outgoing messages.
	
1.2.7
	Outgoing messages now go through the config for formatting
	Zaway now makes an outgoing message, instead of an admin message
	The 'zlocate' command can now handle multiple users
	The simple user format for "To:" is in effect again
	Prettyed up the zwrite line for using 'reply' on a zaway
	Added a workaround for a libzephyr bug that caused zwrites to fail
  	  if zephyrs were sent just before and just after renewing tickets
	Fixed a memory bug in getsubs
	Added receive support for zcrypt messages
	Added the 'zcrypt' variable which controls whether or not zcrypt
  	  messages are decrypted
	'reply' is disabled for zcrypt until sending zcrypt works
	Started implementing zcrypt command
	More updates to the intro doc
	
1.2.6
	Started adding code for newmsgproc.  It doesn't fully work yet!
	  Don't use it.
	Added search, '/' and '?' to basic help.
	Will attempt to keep the current message as close as possible
	     to the previous current message after an expunge.
	"set <variable>" and "unset <variable>" now work for boolean variables.
	Fixed a bug in owl_function_calculate_topmsg_normal that caused a
	  segfault
	Fixed some typos in the intro doc
	Removed old zlog functions from zephyr.c
	Implemented the dump command
	New startup message
	
1.2.5
	Patch to fix memory bug in replying to CC messages
	If we're on Athena and have static krb (or other) libraries, use
	  them
	Added "athstatic" program to the release, which handles the above
	Cast to an int for isspace, to make gcc -Wall quiet